[gd_scene load_steps=2 format=3 uid="uid://co0t5m2qa8e1n"]

[ext_resource type="Script" uid="uid://cuw5e4j0wx3ba" path="res://scripts/ui/time_display.gd" id="1_m5yva"]

[node name="TimeDisplay" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 100.0
grow_horizontal = 0
script = ExtResource("1_m5yva")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="DayLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Day 1 (Monday)"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Morning"
horizontal_alignment = 1

[node name="DateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Week 1"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Speed:"

[node name="SpeedSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="PauseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Pause/Resume"

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpeedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/PauseButton" to="." method="_on_pause_button_pressed"]
